--- a/memoria/practica1b.tex
+++ b/memoria/practica1b.tex
@@ -280,9 +280,9 @@ Además tiene una función para hacer las pruebas Leave One Out dándole un conj
 
 \subsection{\color[rgb]{0.0,0.0,0.51}Manual de usuario}
 
-Cada uno de los algoritmos están implementados en distintos ficheros de los que podemos ver su contenido en el \textit{leeme} que se nos pide que incluyamos con el código. Los experimentos han sido ejecutados usando el fichero main al que le pasamos por argumentos el nombre del algoritmo a usar: KNN, SFS, BL, ES, BT y BText. La semilla se establece dentro del fichero al inicio de la ejecución del algoritmo para cada una de las particiones. Esto lo hemos hecho así para poder cortar la obtención de datos cuando sea necesaria y poder retomar los experimento desde la partición por las que nos quedáramos, así no se desajusta la semilla con la que hacemos los experimentos al retomar.\\
+Cada uno de los algoritmos están implementados en distintos ficheros de los que podemos ver su contenido en el \textit{leeme} que se nos pide que incluyamos con el código. Los experimentos han sido ejecutados usando el fichero main al que le pasamos por argumentos el nombre del algoritmo a usar: 3NN, SFS, BL, ES, BT y BText. La semilla se establece dentro del fichero al inicio de la ejecución del algoritmo para cada una de las particiones. Esto lo hemos hecho así para poder cortar la obtención de datos cuando sea necesaria y poder retomar los experimento desde la partición por las que nos quedáramos, así no se desajusta la semilla con la que hacemos los experimentos al retomar.\\
 
-Entonces para ejecutar los experimentos de cada algoritmo lo que haremos es \textit{python main.py algoritmo} y se ejecutará el algoritmo sobre todas las particiones de datos que tenemos.\\
+Entonces para ejecutar por ejemplo los experimentos para el Enfriamiento Simulado lo que haremos es \textit{python main.py ES} y se ejecutará el algoritmo sobre todas las particiones de datos que tenemos.\\
 
 \section{\color[rgb]{0.0,0.0,0.21}Experimentos y análisis de resultados}
 
