--- a/practica2b.tex
+++ b/practica2b.tex
@@ -134,83 +134,25 @@ return mejor_s
 \end{lstlisting}
 
 \newpage
-\subsection{\color[rgb]{0.0,0.0,0.51}Búsqueda Tabú (BT.py)}
+\subsection{\color[rgb]{0.0,0.0,0.51} ILS (ILS.py)}
 
 Aquí tenemos el pseudocódigo para la búsqueda tabú básica, en el también se ve cómo manejamos la lista tabú como una lista cíclica que consultamos para ver si un vecino ha sido generado mediante un movimiento tabú:\\
 
 \begin{lstlisting}
-sol_actual = partimos de una solucion aleatoria
+s = sol. inicial aleatoria
+s = sol. encontrada por Busqueda Local partiendo de s
 
-while no se hayan generado el maximo de vecinos permitido:
-	elegimos n vecinos aleatorios a revisar, siendo n el maximo permitido por iteracion
-
-	for cada vecino elegido:
-
-		if el movimiento que lo genera esta en la lista tabu(LT):
-			if el vecino es mejor que la mejor sol encontrada and mejor que el mejor vecino explorado en esta iteracion:
-				mejor vecino = nuevo vecino
-		else:
-			if mejor que el mejor vecino explorado en esta iteracion:
-				mejor vecino = nuevo vecino
-
-		if hemos generado el maximo de vecinos totales permitidos:
-			break
-
-	sol_actual = mejor vecino encontrado en la iteracion
-
-	if sol_actual mejor que la mejor encontrada hasta el momento:
-		mejor_sol_encontrada = sol_actual
-
-	LT[posicion_correspondiente] = movimiento que genero el mejor vecino de esta iteracion
-	posicion_correspondiente = a la siguiente ciclicamente
-
-return mejor_sol_encontrada
-\end{lstlisting}
-
-\newpage
-\subsection{\color[rgb]{0.0,0.0,0.51}Búsqueda Tabú Extendida (BText.py)}
-
-El esquema de búsqueda es el mismo que en la BT básica, lo que cambia es que añadimos un esquema de reinicialización en el bucle interno que funciona del siguiente modo:\\
-
-\begin{lstlisting}
-#iniciamos la memoria a largo plazo como un vector con tantos 0 como caracteristicas haya
-while no hayamos generado mas vecinos que el total permitido:
-	#todo igual que en la BT basica
+for 24 veces:
+	if s es mejor que la mejor sol. encontrada:
+		best_s = s
+		
+	s = mutar(best_s)
+	s = sol. encontrada por Busqueda Local partiendo de s
 	
-	sol_actual = mejor vecino encontrado en la iteracion
-	soluciones_aceptadas++
-	para cada car. seleccionada en mejor vecino aumentamos el contador de la memoria a largo plazo de ella en 1
-	
-	if mejor vecino es mejor que mejor sol. hasta el momento:
-		actualizamos la mejor
-	else:
-		numero de iteraciones sin mejorar++
-		
-	if llevamos 10 iteraciones sin mejorar la mejor solucion:
-		numero de iteraciones sin mejora = 0
-		obtenemos numero aleatorio en el [1,3] con probabilidades [0.25,0.25,0.5]
-		
-		if sale 1:
-			sol_actual = una solucion nueva completamente aleatoria
-		elif sale 2:
-			sol_actual = mejor_solucion_encontrada
-		else:
-			#construimos una nueva sol_actual donde cada caracteristica se rige por lo que sigue
-			sol_actual[i] = U(0,1) < (1 - (numero de veces que la car. i se ha aparecido en las sols. aceptadas/soluciones_aceptadas)
-			
-		Elegimos si reducir o aumentar el tamanio de la lista tabu
-		
-		if Reducir:
-			LT = una lista con la mitad de tamanio con todas las casillas a -1 (vacia)
-		else:
-			LT = una lista con el tamanio de antes + la mitad de ese tamanio con todo a -1
-			
-		Se insertaran nuevos elementos empezando desde el inicio de la lista
-		
-return la mejor solucion encontrada
-		
+return best_s
 \end{lstlisting}
 \newpage
+
 \section{\color[rgb]{0.0,0.0,0.21}Breve descripción del algoritmo de comparación}
 
 Para el algoritmo de comparación, SFS, lo que hacemos es lo que vamos a reflejar en el siguiente pseudocódigo, la principal diferencia es que no tenemos la función usual flip sino que hemos hecho una función especial para poder realizar una función vectorizada en Python (aunque no produce ninguna mejora en tiempo a la versión que tendríamos si simplemente tuviésemos un for que recorriese las características que quedan por añadir hasta encontra la de mayor ganancia), esta función crea una nueva solución poniendo a True una componente de la solución que le pasamos y nos da su porcentaje de clasificación, como hacemos en el resto de algoritmos. Dicho esto pasamos al pseudocódigo:
@@ -237,22 +179,23 @@ return el conjunto de caracteristicas al que hemos llegado
 
 El código usado en prácticas lo he implementado yo a partir de las explicaciones dadas tanto en clase de prácticas como de teoría sobre los distintos algoritmos, siendo de mucha utilidad los pseudocódigos de las transparencia de teoría así como el esqueme de funcinamiento de las búsqueda tabú, también de las transparencia.\\
 
-La parte que no ha sido implementada por mí es la correspondiente a la evaluación de las soluciones, es decir, tanto el KNN como los mecanismos de evaluación de las soluciones. Para ello he usado un módulo de Python llamado \textbf{\textcolor{green}{sklearn}} cuya documentación la podemos consultar en la siguien web que es la que he consultado yo para poder usar aquello que necesitaba \url{http://scikit-learn.org/stable/documentation.html}. Este módulo nos permite tanto crear un clasificador 3NN con los datos que elijamos y posteriormente etiquetar datos u obtener directamente el porcentaje de acierto para un conjunto de datos.\\
+La parte que no ha sido implementada por mí es la correspondiente a la evaluación de las soluciones, es decir, tanto el KNN como los mecanismos de evaluación de las soluciones. Para ello he usado el código desarrollado por \textbf{Alejandro García Montoro} el cuál ha implementado tanto el clasificador KNN como los mecanismos para obtener el score de las soluciones dentro (con LOO) y fuera de la muestra con PyCUDA que permite insertar código CUDA en código Python. Con lo cual los tiempos de ejecución bajan considerablemente con respecto a los tiempos de la práctica anterior ya que el cuello de botella de los algoritmos, que es la evaluación de las soluciones con LOO, se ejecuta en la tarjeta gráfica, siendo mucho más rápidos los cálculos.\\
 
 Además tiene una función para hacer las pruebas Leave One Out dándole un conjunto de datos y nos dice los índices para poder separar el conjunto de datos de aprendizaje en una muestra por un lado y el resto por otro y poder calcular la función objetivo como queremos.\\
 
 \subsection{\color[rgb]{0.0,0.0,0.51}Manual de usuario}
-Los algoritmos han sido implementados en Python 2.7.6 para su ejecución son necesarios tener instalados los módulos compatibles con esta versión de Python siguientes:\\
+Los algoritmos han sido implementados en Python 3.1 TODO para su ejecución son necesarios tener instalados los módulos compatibles con esta versión de Python siguientes:\\
 
 \begin{itemize}
 \item numpy (v 1.8.2) \textbf{sudo apt-get install python-numpy}
-\item scikit \textbf{sudo apt-get install python-scikits-learn}
+\item jinja2
+\item pycuda
 \item El resto de módulos empleados suelen venir con las distribuciones básicas de Python (random, sys y time).
 \end{itemize}
 
-Cada uno de los algoritmos están implementados en distintos ficheros de los que podemos ver su contenido en el \textbf{\textcolor{green}{LEEME}} que se nos pide que incluyamos con el código. Los experimentos han sido ejecutados usando el fichero main al que le pasamos por argumentos el nombre del algoritmo a usar: 3NN, SFS, BL, ES, BT y BText. La semilla se establece dentro del fichero al inicio de la ejecución del algoritmo para cada una de las particiones. Esto lo hemos hecho así para poder cortar la obtención de datos cuando sea necesaria y poder retomar los experimento desde la partición por las que nos quedáramos, así no se desajusta la semilla con la que hacemos los experimentos al retomar.\\
+Cada uno de los algoritmos están implementados en distintos ficheros de los que podemos ver su contenido en el \textbf{\textcolor{green}{LEEME}} que se nos pide que incluyamos con el código. Los experimentos han sido ejecutados usando el fichero main al que le pasamos por argumentos el nombre del algoritmo a usar: 3NN, SFS, BMB, GRASP, e ILS. La semilla se establece dentro del fichero al inicio de la ejecución del algoritmo para cada una de las particiones. Esto lo hemos hecho así para poder cortar la obtención de datos cuando sea necesaria y poder retomar los experimento desde la partición por las que nos quedáramos, así no se desajusta la semilla con la que hacemos los experimentos al retomar.\\
 
-Entonces para ejecutar por ejemplo los experimentos para el Enfriamiento Simulado lo que haremos es \textit{python main.py ES} y se ejecutará el algoritmo sobre todas las particiones de datos que tenemos.\\
+Entonces para ejecutar por ejemplo los experimentos para el GRASP lo que haremos es \textit{python mainCUDA.py GRASP} y se ejecutará el algoritmo sobre todas las particiones de datos que tenemos.\\
 
 En el directorio \textbf{\textcolor{green}{make\_partitions}} tenemos tanto los archivos arff como los códigos necesarios para elaborar las particiones que serán utilizadas por nuestros algoritmos. Esto no es necesario para ejecutar los programas puesto que en el directorio \textbf{\textcolor{green}{partitions}} tenemos almacenadas todas las particiones construidas. No obstante si se quisiera replicar el procedimiento de desarrollo de particiones lo que haríamos sería: eliminar los archivos con extensión .npy del directorio \textbf{make\_partitions} (para tener seguridad de que no se corrompan dichos archivos), ejecutar el loader con la instrucción \textbf{python loader.py} y a continuación elaborar las particiones con \textbf{python partition\_maker.py} (dentro de este directorio que es donde se encuentran ambos códigos). Esto generará diversos archivos de extensión .npy con nombres que empiezan por arr, wdbc o libras (según la base) seguida de un número y la palabra test o training.\\
 
@@ -299,6 +242,53 @@ Adjuntamos también las tablas en un fichero por si no se leen correctamente en 
 % \usepackage{multirow}
 \begin{table}[H]
 \centering
+\caption{3NN}
+\label{my-label}
+\resizebox{\textwidth}{!}{\begin{tabular}{l|l|l|l|l|l|l|l|l|l|l|l|l|}
+\cline{2-13}
+\multirow{2}{*}{}                   & \multicolumn{4}{c|}{Wdbc}                     & \multicolumn{4}{c|}{Movement\_Libras}         & \multicolumn{4}{c|}{Arrhythmia}               \\ \cline{2-13} 
+                                    & \%\_clas\_in & \%\_clas\_out & \%\_red & T    & \%\_clas\_in & \%\_clas\_out & \%\_red & T    & \%\_clas\_in & \%\_clas\_out & \%\_red & T    \\ \hline
+\multicolumn{1}{|l|}{Partición 1-1} & 96,14        & 96,13         & 0,00    & 0,00 & 75,56        & 76,11         & 0,00    & 0,00 & 65,46        & 64,06         & 0,00    & 0,00 \\ \hline
+\multicolumn{1}{|l|}{Partición 1-2} & 96,83        & 95,79         & 0,00    & 0,00 & 67,78        & 70,56         & 0,00    & 0,00 & 59,38        & 62,37         & 0,00    & 0,00 \\ \hline
+\multicolumn{1}{|l|}{Partición 2-1} & 95,44        & 96,47         & 0,00    & 0,00 & 70,00        & 67,78         & 0,00    & 0,00 & 62,89        & 62,50         & 0,00    & 0,00 \\ \hline
+\multicolumn{1}{|l|}{Partición 2-2} & 96,13        & 96,49         & 0,00    & 0,00 & 74,44        & 72,78         & 0,00    & 0,00 & 63,02        & 64,43         & 0,00    & 0,00 \\ \hline
+\multicolumn{1}{|l|}{Partición 3-1} & 93,68        & 97,18         & 0,00    & 0,00 & 70,56        & 73,33         & 0,00    & 0,00 & 60,82        & 65,10         & 0,00    & 0,00 \\ \hline
+\multicolumn{1}{|l|}{Partición 3-2} & 97,54        & 95,44         & 0,00    & 0,00 & 70,00        & 72,22         & 0,00    & 0,00 & 61,98        & 64,95         & 0,00    & 0,00 \\ \hline
+\multicolumn{1}{|l|}{Partición 4-1} & 96,14        & 95,42         & 0,00    & 0,00 & 72,22        & 72,22         & 0,00    & 0,00 & 60,82        & 64,58         & 0,00    & 0,00 \\ \hline
+\multicolumn{1}{|l|}{Partición 4-2} & 98,24        & 95,44         & 0,00    & 0,00 & 70,00        & 74,44         & 0,00    & 0,00 & 64,58        & 62,37         & 0,00    & 0,00 \\ \hline
+\multicolumn{1}{|l|}{Partición 5-1} & 96,14        & 95,42         & 0,00    & 0,00 & 71,11        & 78,33         & 0,00    & 0,00 & 67,01        & 63,02         & 0,00    & 0,00 \\ \hline
+\multicolumn{1}{|l|}{Partición 5-2} & 97,89        & 95,44         & 0,00    & 0,00 & 71,67        & 73,33         & 0,00    & 0,00 & 63,54        & 62,37         & 0,00    & 0,00 \\ \hline
+\multicolumn{1}{|l|}{Media}         & 96,42        & 95,92         & 0,00    & 0,00 & 71,33        & 73,11         & 0,00    & 0,00 & 62,95        & 63,58         & 0,00    & 0,00 \\ \hline
+\end{tabular}}
+\end{table}
+
+% Please add the following required packages to your document preamble:
+% \usepackage{multirow}
+\begin{table}[H]
+\centering
+\caption{SFS}
+\label{my-label}
+\resizebox{\textwidth}{!}{\begin{tabular}{l|l|l|l|l|l|l|l|l|l|l|l|l|}
+\cline{2-13}
+\multirow{2}{*}{}                   & \multicolumn{4}{c|}{Wdbc}                     & \multicolumn{4}{c|}{Movement\_Libras}         & \multicolumn{4}{c|}{Arrhythmia}               \\ \cline{2-13} 
+                                    & \%\_clas\_in & \%\_clas\_out & \%\_red & T    & \%\_clas\_in & \%\_clas\_out & \%\_red & T    & \%\_clas\_in & \%\_clas\_out & \%\_red & T    \\ \hline
+\multicolumn{1}{|l|}{Partición 1-1} & 95,44        & 95,42         & 83,33   & 0,24 & 78,89        & 72,22         & 90,00   & 1,04 & 79,90        & 68,23         & 97,12   & 3,00 \\ \hline
+\multicolumn{1}{|l|}{Partición 1-2} & 97,54        & 92,98         & 90,00   & 0,15 & 74,44        & 60,00         & 93,33   & 0,69 & 74,48        & 70,10         & 98,56   & 1,51 \\ \hline
+\multicolumn{1}{|l|}{Partición 2-1} & 97,19        & 97,54         & 86,67   & 0,20 & 77,22        & 66,11         & 88,89   & 1,16 & 84,54        & 71,35         & 97,12   & 3,00 \\ \hline
+\multicolumn{1}{|l|}{Partición 2-2} & 97,54        & 95,79         & 90,00   & 0,15 & 76,11        & 65,56         & 91,11   & 0,92 & 72,92        & 69,59         & 99,28   & 0,85 \\ \hline
+\multicolumn{1}{|l|}{Partición 3-1} & 96,49        & 95,77         & 83,33   & 0,24 & 78,33        & 73,89         & 90,00   & 1,04 & 77,32        & 69,79         & 97,48   & 2,62 \\ \hline
+\multicolumn{1}{|l|}{Partición 3-2} & 97,89        & 95,09         & 86,67   & 0,20 & 76,11        & 75,00         & 91,11   & 0,92 & 85,94        & 74,23         & 96,04   & 4,27 \\ \hline
+\multicolumn{1}{|l|}{Partición 4-1} & 95,09        & 91,55         & 93,33   & 0,11 & 76,11        & 67,22         & 91,11   & 0,92 & 79,90        & 67,19         & 96,04   & 4,24 \\ \hline
+\multicolumn{1}{|l|}{Partición 4-2} & 98,24        & 94,04         & 76,67   & 0,33 & 70,56        & 65,56         & 93,33   & 0,69 & 83,33        & 78,87         & 96,76   & 3,41 \\ \hline
+\multicolumn{1}{|l|}{Partición 5-1} & 96,84        & 97,18         & 86,67   & 0,20 & 68,33        & 62,78         & 93,33   & 0,70 & 84,02        & 69,79         & 96,04   & 4,26 \\ \hline
+\multicolumn{1}{|l|}{Partición 5-2} & 98,24        & 94,04         & 83,33   & 0,24 & 74,44        & 66,11         & 92,22   & 0,81 & 83,85        & 73,71         & 96,04   & 4,25 \\ \hline
+\multicolumn{1}{|l|}{Media}         & 97,05        & 94,94         & 86,00   & 0,21 & 75,05        & 67,45         & 91,44   & 0,89 & 80,62        & 71,29         & 97,05   & 3,14 \\ \hline
+\end{tabular}}
+\end{table}
+% Please add the following required packages to your document preamble:
+% \usepackage{multirow}
+\begin{table}[H]
+\centering
 \caption{Resultados BMB}
 \label{my-label}
 \resizebox{\textwidth}{!}{\begin{tabular}{l|l|l|l|l|l|l|l|l|l|l|l|l|}
@@ -323,18 +313,63 @@ Adjuntamos también las tablas en un fichero por si no se leen correctamente en 
 % \usepackage{multirow}
 \begin{table}[H]
 \centering
-\caption{Resultados Globales}
+\caption{GRASP}
 \label{my-label}
-\resizebox{\textwidth}{!}{\begin{tabular}{lllllllllllll}
-\hline
-\multicolumn{1}{|c|}{\multirow{2}{*}{Totales}} & \multicolumn{4}{c|}{Wdbc}                                                                                                           & \multicolumn{4}{c|}{Movement\_Libras}                                                                                               & \multicolumn{4}{c|}{Arrhythmia}                                                                                                \\ \cline{2-13} 
-\multicolumn{1}{|c|}{}                         & \multicolumn{1}{l|}{\%\_clas\_out} & \multicolumn{1}{l|}{\%\_red} & \multicolumn{1}{l|}{T}      & \multicolumn{1}{l|}{\%\_clas\_in} & \multicolumn{1}{l|}{\%\_clas\_out} & \multicolumn{1}{l|}{\%\_red} & \multicolumn{1}{l|}{T}      & \multicolumn{1}{l|}{\%\_clas\_in} & \multicolumn{1}{l|}{\%\_clas\_out} & \multicolumn{1}{l|}{\%\_red} & \multicolumn{1}{l|}{T}      & \multicolumn{1}{l|}{T}       \\ \hline
-\multicolumn{1}{|l|}{3-NN}                     & \multicolumn{1}{l|}{96,412}        & \multicolumn{1}{l|}{95,917}  & \multicolumn{1}{l|}{0}      & \multicolumn{1}{l|}{0}            & \multicolumn{1}{l|}{68,106}        & \multicolumn{1}{l|}{70,607}  & \multicolumn{1}{l|}{0}      & \multicolumn{1}{l|}{0}            & \multicolumn{1}{l|}{63,625}        & \multicolumn{1}{l|}{64,765}  & \multicolumn{1}{l|}{0}      & \multicolumn{1}{l|}{0}       \\ \hline
-\multicolumn{1}{|l|}{SFS}                      & \multicolumn{1}{l|}{97,043}        & \multicolumn{1}{l|}{94,934}  & \multicolumn{1}{l|}{85,996} & \multicolumn{1}{l|}{16,745}       & \multicolumn{1}{l|}{74,274}        & \multicolumn{1}{l|}{66,774}  & \multicolumn{1}{l|}{89,884} & \multicolumn{1}{l|}{62,559}       & \multicolumn{1}{l|}{79,214}        & \multicolumn{1}{l|}{70,308}  & \multicolumn{1}{l|}{97,912} & \multicolumn{1}{l|}{147,213} \\ \hline
-\multicolumn{1}{|l|}{BL}                       & \multicolumn{1}{l|}{97,22}         & \multicolumn{1}{l|}{95,43}   & \multicolumn{1}{l|}{47,00}  & \multicolumn{1}{l|}{7,58}         & \multicolumn{1}{l|}{70,55}         & \multicolumn{1}{l|}{71,00}   & \multicolumn{1}{l|}{45,33}  & \multicolumn{1}{l|}{16,08}        & \multicolumn{1}{l|}{70,15}         & \multicolumn{1}{l|}{65,75}   & \multicolumn{1}{l|}{53,23}  & \multicolumn{1}{l|}{103,23}  \\ \hline
-\multicolumn{1}{|l|}{ES}                       & \multicolumn{1}{l|}{97,61}         & \multicolumn{1}{l|}{95,25}   & \multicolumn{1}{l|}{48,66}  & \multicolumn{1}{l|}{82,09}        & \multicolumn{1}{l|}{71,939}        & \multicolumn{1}{l|}{70,939}  & \multicolumn{1}{l|}{56,107} & \multicolumn{1}{l|}{173,02}       & \multicolumn{1}{l|}{69,477}        & \multicolumn{1}{l|}{65,494}  & \multicolumn{1}{l|}{48,774} & \multicolumn{1}{l|}{771,943} \\ \hline
-\multicolumn{1}{|l|}{BT básica}                & \multicolumn{1}{l|}{98,765}        & \multicolumn{1}{l|}{95,073}  & \multicolumn{1}{l|}{51,663} & \multicolumn{1}{l|}{646,0437}     & \multicolumn{1}{l|}{76,66}         & \multicolumn{1}{l|}{70,941}  & \multicolumn{1}{l|}{55,217} & \multicolumn{1}{l|}{436,677}      & \multicolumn{1}{l|}{73,31}         & \multicolumn{1}{l|}{67,038}  & \multicolumn{1}{l|}{53,698} & \multicolumn{1}{l|}{737,61}  \\ \hline
-\multicolumn{1}{|l|}{BT extendida}             & \multicolumn{1}{l|}{98,625}        & \multicolumn{1}{l|}{95,286}  & \multicolumn{1}{l|}{48,998} & \multicolumn{1}{l|}{687,294}      & \multicolumn{1}{l|}{74,606}        & \multicolumn{1}{l|}{70,051}  & \multicolumn{1}{l|}{50,552} & \multicolumn{1}{l|}{506,1102}     & \multicolumn{1}{l|}{71,393}        & \multicolumn{1}{l|}{65,905}  & \multicolumn{1}{l|}{53,338} & \multicolumn{1}{l|}{939,708} \\ \hline
+\resizebox{\textwidth}{!}{\begin{tabular}{l|l|l|l|l|l|l|l|l|l|l|l|l|}
+\cline{2-13}
+\multirow{2}{*}{}                   & \multicolumn{4}{c|}{Wdbc}                      & \multicolumn{4}{c|}{Movement\_Libras}          & \multicolumn{4}{c|}{Arrhythmia}                 \\ \cline{2-13} 
+                                    & \%\_clas\_in & \%\_clas\_out & \%\_red & T     & \%\_clas\_in & \%\_clas\_out & \%\_red & T     & \%\_clas\_in & \%\_clas\_out & \%\_red & T      \\ \hline
+\multicolumn{1}{|l|}{Partición 1-1} & 98,6         & 91,90         & 80,00   & 9,51  & 81,67        & 75,56         & 86,67   & 33,30 & 85,05        & 72,92         & 93,88   & 132,67 \\ \hline
+\multicolumn{1}{|l|}{Partición 1-2} & 98,94        & 95,44         & 46,67   & 10,88 & 78,33        & 72,22         & 85,56   & 36,15 & 82,29        & 67,01         & 92,81   & 99,77  \\ \hline
+\multicolumn{1}{|l|}{Partición 2-1} & 97,89        & 94,01         & 66,67   & 8,38  & 78,89        & 67,22         & 86,67   & 34,03 & 84,54        & 77,08         & 94,60   & 118,87 \\ \hline
+\multicolumn{1}{|l|}{Partición 2-2} & 98,59        & 96,14         & 23,33   & 10,54 & 81,67        & 71,11         & 84,44   & 36,00 & 82,29        & 73,71         & 93,88   & 78,29  \\ \hline
+\multicolumn{1}{|l|}{Partición 3-1} & 97,19        & 96,83         & 60,00   & 9,11  & 80,00        & 70,00         & 87,78   & 35,56 & 82,47        & 70,83         & 92,45   & 98,61  \\ \hline
+\multicolumn{1}{|l|}{Partición 3-2} & 98,94        & 96,14         & 70,00   & 11,25 & 78,89        & 75,00         & 84,44   & 32,54 & 84,38        & 70,62         & 93,17   & 157,76 \\ \hline
+\multicolumn{1}{|l|}{Partición 4-1} & 97,89        & 95,42         & 60,00   & 9,18  & 83,33        & 72,78         & 77,78   & 38,11 & 81,44        & 73,96         & 92,45   & 102,19 \\ \hline
+\multicolumn{1}{|l|}{Partición 4-2} & 98,94        & 94,74         & 46,67   & 9,68  & 80,56        & 71,67         & 80,00   & 35,71 & 85,94        & 73,71         & 90,29   & 143,39 \\ \hline
+\multicolumn{1}{|l|}{Partición 5-1} & 98,25        & 91,90         & 70,00   & 10,13 & 77,22        & 78,89         & 86,67   & 31,41 & 86,08        & 69,79         & 94,96   & 108,93 \\ \hline
+\multicolumn{1}{|l|}{Partición 5-2} & 98,94        & 94,39         & 73,33   & 10,98 & 81,67        & 75,00         & 81,11   & 32,40 & 82,81        & 76,29         & 93,17   & 99,15  \\ \hline
+\multicolumn{1}{|l|}{Media}         & 98,42        & 94,69         & 59,67   & 9,96  & 80,22        & 72,95         & 84,11   & 34,52 & 83,73        & 72,59         & 93,17   & 113,96 \\ \hline
+\end{tabular}}
+\end{table}
+
+% Please add the following required packages to your document preamble:
+% \usepackage{multirow}
+\begin{table}[H]
+\centering
+\caption{ILS}
+\label{my-label}
+\resizebox{\textwidth}{!}{\begin{tabular}{l|l|l|l|l|l|l|l|l|l|l|l|l|}
+\cline{2-13}
+\multirow{2}{*}{}                   & \multicolumn{4}{c|}{Wdbc}                     & \multicolumn{4}{c|}{Movement\_Libras}          & \multicolumn{4}{c|}{Arrhythmia}                 \\ \cline{2-13} 
+                                    & \%\_clas\_in & \%\_clas\_out & \%\_red & T    & \%\_clas\_in & \%\_clas\_out & \%\_red & T     & \%\_clas\_in & \%\_clas\_out & \%\_red & T      \\ \hline
+\multicolumn{1}{|l|}{Partición 1-1} & 98,6         & 94,37         & 63,33   & 3,06 & 79,44        & 76,67         & 46,66   & 12,04 & 79,38        & 66,67         & 52,52   & 114,28 \\ \hline
+\multicolumn{1}{|l|}{Partición 1-2} & 98,6         & 95,09         & 53,33   & 3,10 & 74,44        & 71,67         & 48,89   & 10,99 & 74,48        & 67,01         & 55,40   & 111,76 \\ \hline
+\multicolumn{1}{|l|}{Partición 2-1} & 98,25        & 96,13         & 53,33   & 3,60 & 75,56        & 70,00         & 52,22   & 10,83 & 74,74        & 65,10         & 53,24   & 95,07  \\ \hline
+\multicolumn{1}{|l|}{Partición 2-2} & 98,59        & 95,79         & 46,66   & 3,21 & 80,00        & 73,89         & 52,22   & 11,36 & 74,48        & 72,16         & 53,96   & 119,37 \\ \hline
+\multicolumn{1}{|l|}{Partición 3-1} & 97,19        & 97,54         & 43,33   & 3,15 & 77,78        & 73,33         & 53,33   & 12,83 & 76,29        & 68,23         & 55,04   & 102,29 \\ \hline
+\multicolumn{1}{|l|}{Partición 3-2} & 99,3         & 95,79         & 36,66   & 3,13 & 78,89        & 71,11         & 53,33   & 11,38 & 76,56        & 65,98         & 57,91   & 115,71 \\ \hline
+\multicolumn{1}{|l|}{Partición 4-1} & 98,25        & 96,13         & 46,66   & 2,47 & 81,11        & 74,44         & 54,44   & 11,94 & 76,80        & 68,23         & 51,80   & 114,23 \\ \hline
+\multicolumn{1}{|l|}{Partición 4-2} & 99,3         & 94,39         & 33,33   & 3,07 & 78,33        & 75,00         & 55,56   & 13,08 & 76,04        & 62,89         & 50,72   & 112,01 \\ \hline
+\multicolumn{1}{|l|}{Partición 5-1} & 97,89        & 94,72         & 43,33   & 2,91 & 76,11        & 78,89         & 54,44   & 12,41 & 76,29        & 67,19         & 48,20   & 129,35 \\ \hline
+\multicolumn{1}{|l|}{Partición 5-2} & 99,3         & 95,44         & 43,33   & 2,67 & 78,89        & 78,89         & 45,56   & 11,46 & 76,04        & 63,92         & 56,12   & 105,87 \\ \hline
+\multicolumn{1}{|l|}{Media}         & 98,53        & 95,54         & 46,33   & 3,04 & 78,06        & 74,39         & 51,67   & 11,83 & 76,11        & 66,74         & 53,49   & 111,99 \\ \hline
+\end{tabular}}
+\end{table}
+
+\begin{table}[H]
+\centering
+\caption{Resultados Totales}
+\label{my-label}
+\resizebox{\textwidth}{!}{\begin{tabular}{l|l|l|l|l|l|l|l|l|l|l|l|l|}
+\cline{2-13}
+                            & \multicolumn{4}{c|}{Wdbc}                      & \multicolumn{4}{c|}{Movement\_Libras}           & \multicolumn{4}{c|}{Arrhythmia}                  \\ \cline{2-13} 
+                            & \%\_clas\_in & \%\_clas\_out & \%\_red & T     & \%\_clas\_in & \%\_clas\_out & \%\_red & T      & \%\_clas\_in & \%\_clas\_out & \%\_red & T       \\ \hline
+\multicolumn{1}{|l|}{3-NN}  & 96,417       & 95,922        & 0       & 0     & 71,334       & 73,11         & 0       & 0      & 62,95        & 63,575        & 0       & 0       \\ \hline
+\multicolumn{1}{|l|}{SFS}   & 97,05        & 94,94         & 86      & 0,206 & 75,054       & 67,445        & 91,443  & 0,889  & 80,62        & 71,285        & 97,048  & 3,141   \\ \hline
+\multicolumn{1}{|l|}{BMB}   & 98,35        & 95,43         & 48,33   & 3,42  & 77,67        & 73,00         & 55,22   & 13,00  & 72,95        & 64,87         & 51,73   & 141,21  \\ \hline
+\multicolumn{1}{|l|}{GRASP} & 98,417       & 94,691        & 59,667  & 9,964 & 80,223       & 72,945        & 84,112  & 34,521 & 83,729       & 72,592        & 93,166  & 113,963 \\ \hline
+\multicolumn{1}{|l|}{ILS}   & 98,527       & 95,539        & 46,329  & 3,037 & 78,055       & 74,389        & 51,665  & 11,832 & 76,11        & 66,738        & 53,491  & 111,994 \\ \hline
 \end{tabular}}
 \end{table}
 
